--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "l5r-5ed-roller",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@reduxjs/toolkit": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
