--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,18 @@
 {
-  "short_name": "L5R 5ed Roller",
-  "name": "L5R 5ed Roller",
-  "icons": [],
+  "short_name": "Sakkaku",
+  "name": "Sakkaku",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
