--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sakkaku",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/react",
   "dependencies": {
     "@reduxjs/toolkit": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
