--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.6.6",
     "classnames": "^2.2.6",
     "query-string": "^6.13.5",
+    "rc-animate": "^3.1.1",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
