--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "homepage": "/react",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@craco/craco": "^5.8.0",
     "@reduxjs/toolkit": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.9.2",
     "classnames": "^2.2.6",
+    "craco-less": "^1.17.1",
     "query-string": "^6.13.5",
     "rc-animate": "^3.1.1",
     "react": "^16.13.1",
@@ -21,10 +23,9 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": "react-app"
