--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.9.2",
+    "browserslist": "^4.16.6",
     "classnames": "^2.2.6",
     "craco-less": "^1.17.1",
     "query-string": "^6.13.5",
