--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "/react",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@craco/craco": "^5.8.0",
