--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "antd": "^4.9.2",
     "browserslist": "^4.16.6",
     "classnames": "^2.2.6",
-    "craco-less": "^1.17.1",
+    "craco-antd": "^1.19.0",
     "query-string": "^6.13.5",
     "rc-animate": "^3.1.1",
     "react": "^16.13.1",
