--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.9.2",
+    "babel-jest": "26.6.3",
     "browserslist": "^4.16.6",
     "classnames": "^2.2.6",
     "craco-antd": "^1.19.0",
