--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "workerize-loader": "^1.3.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "craco --openssl-legacy-provider start",
+    "build": "craco --openssl-legacy-provider build",
     "test": "craco test"
   },
   "eslintConfig": {
