--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browserslist": "^4.16.6",
     "classnames": "^2.2.6",
     "craco-antd": "^1.19.0",
+    "l5r-ffg-probabilities": "file:../../l5r-ffg-math",
     "query-string": "^6.13.5",
     "rc-animate": "^3.1.1",
     "react": "^16.13.1",
